# sqlx_actix

./: .env  Cargo.toml
migrations/: 20230721022029_init.up.sql
src/: main.rs
src/configuration/: config_functions.rs  mod.rs
src/handlers/: user_handlers.rs
src/models/: auth_user.rs  mod.rs  token_claims.rs  user_model.rs  user_no_password.rs
