[package]
name = "sqlx_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
actix = "0.13.0"
sqlx = { version = "0.7", features = [
  "mysql",
  "runtime-tokio-native-tls",
  "chrono",
] }
actix-cors = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }


# Auth
actix-web-httpauth = "0.8.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
argonautica = { version = "0.2", features = ["serde", "simd"] }
